modif du HTML plus qlq css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,35 @@
     <h1>
         Portfolio Ounissa SADAOUI
     </h1>
-</header>
+</header>   
+
 <body>
-    
+    <main>
+    <section id="page_presentation">
+    <figure id="presentation">
+        <img id= "dean" src="asset/dean.jpg" alt="that famous dean whinchester shot from bloddlust">
+        <figcaption>Bonjour, je suis Ounissa, welcome to my Portfolio!
+            Je suis développeuse back et front end en alternance
+        Je fais du .net et du js (angular) chez Dédalus
+        Ici vous pouvez voir Dean Winchester, héro de la série supernatural (the CW, 2005-2020? ou 21?)
+        Personnage magnifique qui plus est.
+    </figcaption>
+    </figure>
+    </section>
+
+    <section id="competences">
+
+        <ul>
+            <li>Good hunter</li>
+            <li>Good brother</li>
+            <li>NOT the ultimate killer</li>
+            <li>Micheal's Sword</li>
+            
+        </ul>
+
+    </section>
+
+
+</main>
 </body>
 </html>
