corrections des erreurs w3c sur le html

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <header>
         <nav class="navbar">
           <div class="navbar_gauche">
-            <a href="#"><i class="fas fa-home"style="color: #000000;"></i></i></a>
-            <a href="#"><i class="fa-solid fa-moon"alt="mode-light/dark" style="color: #000000;"></i></a>
+            <a href="#"><i class="fas fa-home" style="color: #000000;"></i></a>
+            <a href="#"><i class="fa-solid fa-moon" style="color: #000000;"></i></a>
           </div>
           <div class="navbar_droite">
             <a href="#"><i class="fa-solid fa-book" style="color: #000000;"></i></a>
             <a href="#"><i class="fa-solid fa-gears" style="color: #000000;"> </i></a>
             <a href="#"><i class="fa-solid fa-signs-post" style="color: #000000;"></i></a>
-            <a href="#"><i class="fa-solid fa-mobile-retro"style="color: #000000;"></i></a>
+            <a href="#"><i class="fa-solid fa-mobile-retro" style="color: #000000;"></i></a>
           </div>
         </nav>
       </header>
