ajout de mon bitmoji

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        
     <figure id="presentation">
         <h2>Ounissa, développeuse Web et .NET</h2>
-        <img id= "dean" src="asset/dean.jpg" alt="that famous dean whinchester shot from bloddlust"> <br>
+        <img id= "Mon-bitmoji" src="asset/hello.png" alt="this is my bitmoji saying hello"> <br>
         <figcaption>
             <br>
             Bienvenue ! <br>
