mise en place de gallery pour projets

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <header>
         <nav class="navbar">
           <div class="navbar_gauche">
-            <a href="#"><i class="fas fa-home" style="color: #000000;"></i></a>
-            <a href="#"><i class="fa-solid fa-moon" style="color: #000000;"></i></a>
+            <a href="#presentation"><i class="fas fa-home" style="color: #000000;"></i></a>
+            <a href="#mode_nuit"><i class="fa-solid fa-moon" style="color: #000000;"></i></a>
           </div>
           <div class="navbar_droite">
             <a href="#"><i class="fa-solid fa-book" style="color: #000000;"></i></a>
-            <a href="#"><i class="fa-solid fa-gears" style="color: #000000;"> </i></a>
-            <a href="#"><i class="fa-solid fa-signs-post" style="color: #000000;"></i></a>
-            <a href="#"><i class="fa-solid fa-mobile-retro" style="color: #000000;"></i></a>
+            <a href="#competences"><i class="fa-solid fa-gears" style="color: #000000;"> </i></a>
+            <a href="#projets"><i class="fa-solid fa-signs-post" style="color: #000000;"></i></a>
+            <a href="#contact"><i class="fa-solid fa-mobile-retro" style="color: #000000;"></i></a>
           </div>
         </nav>
       </header>
@@ -85,7 +85,38 @@
         
         </ul>
     </section>
+    <section id="projets">
+       <h2>
+        Mes projets
+      </h2>
+     <!-- <div class="grid-container">
+      <div class="gallery-primary" role="grid" aria-labelledby="mes-projets-gauche">
+       <ul id="mes-projets-gauche">
+        <li><img src="https://placehold.jp/250x250.png" alt="representation_projet"></li>
+        <li><img src="https://placehold.jp/200x200.png" alt="representation_projet"></li>        
+       </ul>
+      </div>
+      <div class="gallery-secondary" role="group" aria-labelledby="mes-projets-droite">
+        <ul id="mes-projets-droite">
+         <li><img src="https://placehold.jp/250x250.png" alt="representation_projet"></li>
+        <li><img src="https://placehold.jp/200x200.png" alt="representation_projet"></li>
+        </ul>
+      </div>
+    </div> -->
 
+    
+
+<div class="gallery">
+  <img src="./asset/dean.jpg" alt="representation_projet">
+  <img src="./asset/Lagertha Vikings-min_0.jpg" alt="representation_projet">
+  <img src="./asset/superman-1240x692.jpeg" alt="representation_projet">
+  <img src="./asset/the-batman-guia.jpg" alt="representation_projet">
+  <img src="./asset/Sans titre.jpeg" alt="representation_projet">
+</div>
+
+
+    </section >
+   
 
 </main>
 </body>
