ajout des liens des projets

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <figure>
                 <i class="fa-solid fa-code" style="color: #000000;"></i>
                   <figcaption>
-                     Programmation en: <b>Html</b>, <b>Css</b>, <b>Css</b>, <b>C# </b>et <b>Java</b>.
+                     Programmation en: <b>Html</b>, <b>Css</b>, <b>JavaScript</b>, <b>C# </b>et <b>Java</b>.
                   </figcaption> 
                </figure>
             </li>
@@ -106,18 +106,22 @@
 
     
 
-<div class="gallery">
-  <img src="./asset/dean.jpg" alt="representation_projet">
-  <img src="./asset/Lagertha Vikings-min_0.jpg" alt="representation_projet">
-  <img src="./asset/superman-1240x692.jpeg" alt="representation_projet">
-  <img src="./asset/the-batman-guia.jpg" alt="representation_projet">
-  <img src="./asset/Sans titre.jpeg" alt="representation_projet">
-</div>
+    <div class="gallery">
+      <a href="https://github.com/ounissaSadaoui/Asteroids" target = "_blank"><img src="./asset/asteroids.png" alt="capture d'ecran projet asteroids"></a>
+      <a href="https://github.com/ounissaSadaoui/clavier_musical" target = "_blank"><img src="./asset/clavier.png" alt="capture d'écran clavier musical"></a>
+      <a href="https://github.com/ounissaSadaoui/horloge_js" target = "_blank"> <img src="./asset/horloge.png" alt="capture d'ecran horloge css js"></a>
+      <img src="./asset/the-batman-guia.jpg" alt="representation_projet">
+      <img src="./asset/Sans titre.jpeg" alt="representation_projet">
+    </div>
+</section >
+<section id="contact"> 
 
-
-    </section >
+</section>
    
 
 </main>
+<footer>
+  <p>Ounissa 2023</p>
+</footer>
 </body>
 </html>
