ajout du projet updating css variables with js et de l'image correspondante

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <img id= "Mon-bitmoji" src="asset/hello.png" alt="this is my bitmoji saying hello"> <br>
         <figcaption>
             <br>
-            Bienvenue ! <br>
-            &nbsp; Je suis Ounissa, étudiante à l'École ITIC Paris, en alternance en tant qu'IT Specialist Chez Dédalus HealthCare France.
+            Bienvenue ! <br> <br>
+            &nbsp; Je suis <b>Ounissa</b>, étudiante à l'École <b>ITIC Paris</b>, en alternance en tant qu'<b>IT Specialist</b> Chez<b> Dédalus HealthCare France.</b>
             Dans mes missions principales, je travaille sur du .Net et du JavaScript.
 
     </figcaption>
@@ -52,7 +52,8 @@
         <ul class="liste_competences">
             <li>
               <figure>
-                <i class="fa-solid fa-code" style="color: #000000;"></i>
+                <i class="fa-solid fa-code" style="color: #000000;"></i> 
+
                   <figcaption>
                      Programmation en: <b>Html</b>, <b>Css</b>, <b>JavaScript</b>, <b>C# </b>et <b>Java</b>.
                   </figcaption> 
@@ -110,7 +111,7 @@
       <a href="https://github.com/ounissaSadaoui/Asteroids" target = "_blank"><img src="./asset/asteroids.png" alt="capture d'ecran projet asteroids"></a>
       <a href="https://github.com/ounissaSadaoui/clavier_musical" target = "_blank"><img src="./asset/clavier.png" alt="capture d'écran clavier musical"></a>
       <a href="https://github.com/ounissaSadaoui/horloge_js" target = "_blank"> <img src="./asset/horloge.png" alt="capture d'ecran horloge css js"></a>
-      <img src="./asset/the-batman-guia.jpg" alt="representation_projet">
+      <a href="https://github.com/ounissaSadaoui/uodating-CSS-variables-with-JS" target="_blank"><img src="./asset/project_css_js.png" alt="capture_ecran_projet_js_css"></a>
       <img src="./asset/Sans titre.jpeg" alt="representation_projet">
     </div>
 </section >
