--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Je vous présente mon Portfolio!">
+    <!-- open graph-->
+    <meta property="og:title" content="Mon Portfolio">
+    <meta property="og:type" content="Website">
+    <meta property="og:url" content="https://ounissasadaoui.github.io/Portfolio/">
+    <meta property="og:domain" content="https://github.com/ounissaSadaoui/Portfolio">
+    <meta property="og:description" content="Portfolio développeuse">
+    <meta property= "og:image" content="https://ounissasadaoui.github.io/Portfolio/asset/hello.png">
+    <!--change the image from a png to a jpg, i think it will not work-->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Mon Portfolio">
+    <meta property="twitter:type" content="Website">
+    <meta property="twitter:url" content="https://ounissasadaoui.github.io/Portfolio/">
+    <meta property="twitter:domain" content="https://github.com/ounissaSadaoui/Portfolio">
+    <meta property="twitter:description" content="Portfolio développeuse">
+    <meta property= "twitter:image" content="https://ounissasadaoui.github.io/Portfolio/asset/hello.png">
+
+
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="manifest" href="./favicon/site.webmanifest">    
