changement url de mon image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://ounissasadaoui.github.io/Portfolio/">
     <meta property="og:domain" content="https://github.com/ounissaSadaoui/Portfolio">
     <meta property="og:description" content="Portfolio développeuse">
-    <meta property= "og:image" content="https://ounissasadaoui.github.io/Portfolio/asset/hello.png">
+    <meta property= "og:image" content="https://raw.githubusercontent.com/ounissaSadaoui/Portfolio/main/asset/hello.jpg">
     <!--change the image from a png to a jpg, i think it will not work-->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Mon Portfolio">
@@ -18,7 +18,7 @@
     <meta property="twitter:url" content="https://ounissasadaoui.github.io/Portfolio/">
     <meta property="twitter:domain" content="https://github.com/ounissaSadaoui/Portfolio">
     <meta property="twitter:description" content="Portfolio développeuse">
-    <meta property= "twitter:image" content="https://ounissasadaoui.github.io/Portfolio/asset/hello.png">
+    <meta property= "twitter:image" content="https://raw.githubusercontent.com/ounissaSadaoui/Portfolio/main/asset/hello.jpg">
 
 
     <link rel="stylesheet" href="./css/main.css">
