changement de mon bitmoji en jpg

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
        
     <figure id="presentation">
         <h2>Ounissa, développeuse Web et .NET</h2>
-        <img id= "Mon-bitmoji" src="asset/hello.png" alt="this is my bitmoji saying hello"> <br>
+        <img id= "Mon-bitmoji" src="asset/hello.jpg" alt="this is my bitmoji saying hello"> <br>
         <figcaption>
             <br>
             Bienvenue ! <br> <br>
