ajout itemprops et schema website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body>
+<body itemscope itemtype="https://schema.org/WebSite">
     <header>
         <nav class="navbar">
           <div class="navbar_gauche">
@@ -34,9 +34,9 @@
     <section id="page_presentation">
        
     <figure id="presentation">
-        <h2>Ounissa, développeuse Web et .NET</h2>
-        <img id= "Mon-bitmoji" src="asset/hello.png" alt="this is my bitmoji saying hello"> <br>
-        <figcaption>
+        <h2 itemprop="name">Ounissa, développeuse Web et .NET</h2>
+        <img id= "Mon-bitmoji" src="asset/hello.png" alt="this is my bitmoji saying hello" itemprop="imagegit "> <br>
+        <figcaption itemprop="description">
             <br>
             Bienvenue ! <br>
             &nbsp; Je suis Ounissa, étudiante à l'École ITIC Paris, en alternance en tant qu'IT Specialist Chez Dédalus HealthCare France.
@@ -49,7 +49,7 @@
     <section id="competences">  
         <h2>Compétences</h2>
         <br>
-        <ul class="liste_competences">
+        <ul class="liste_competences" itemprop="genre">
             <li>
               <figure>
                 <i class="fa-solid fa-code" style="color: #000000;"></i>
