initialisation du dark mode

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar">
           <div class="navbar_gauche">
             <a href="#presentation"><i class="fas fa-home" style="color: #000000;"></i></a>
-            <a href="#mode_nuit"><i class="fa-solid fa-moon" style="color: #000000;"></i></a>
+            <a href="#mode_nuit"><button id="Btn"><i class="fa-solid fa-moon" style="color: #000000;"></i></button> </a>
           </div>
           <div class="navbar_droite">
             <a href="#"><i class="fa-solid fa-book" style="color: #000000;"></i></a>
