ajout du lien vers projet de programmation

--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
       <a href="https://github.com/ounissaSadaoui/clavier_musical" target = "_blank"><img src="./asset/clavier.png" alt="capture d'écran clavier musical"></a>
       <a href="https://github.com/ounissaSadaoui/horloge_js" target = "_blank"> <img src="./asset/horloge.png" alt="capture d'ecran horloge css js"></a>
       <a href="https://github.com/ounissaSadaoui/uodating-CSS-variables-with-JS" target="_blank"><img src="./asset/project_css_js.png" alt="capture_ecran_projet_js_css"></a>
-      <img src="./asset/Sans titre.jpeg" alt="representation_projet">
-    </div>
+      <a href="https://github.com/ounissaSadaoui/personnel" target="_blank"><img src="./asset/Sans titre.jpeg" alt="representation_projet"></a>
+    </div>JS
+
   </div>
 </section >
 <section id="contact"> 
