Début modifications du portfolio depuis le DEBUT

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
           </div>
         </nav>
       </header>
-      
-   
+
     <main>
     <section id="page_presentation">
        
@@ -60,7 +59,6 @@
             Bienvenue ! <br> <br>
             &nbsp; Je suis <b>Ounissa</b>, étudiante à l'École <b>ITIC Paris</b>, en alternance en tant qu'<b>IT Specialist</b> Chez<b> Dédalus HealthCare France.</b>
             Dans mes missions principales, je travaille sur du .Net et du JavaScript.
-
     </figcaption>
     </figure>
     </section>
@@ -119,10 +117,15 @@
       <a href="https://github.com/ounissaSadaoui/horloge_js" target = "_blank"> <img src="./asset/horloge.png" alt="capture d'ecran horloge css js"></a>
       <a href="https://github.com/ounissaSadaoui/uodating-CSS-variables-with-JS" target="_blank"><img src="./asset/project_css_js.png" alt="capture_ecran_projet_js_css"></a>
       <a href="https://github.com/ounissaSadaoui/personnel" target="_blank"><img src="./asset/Sans titre.jpeg" alt="representation_projet"></a>
-    </div>JS
+    </div>
 
   </div>
 </section >
+<div>
+  <h2>Projets à présenter</h2>
+  <a href="projet_java.html" target="_blank">Projet Gestion de ligues</a>
+</div>
+
 <section id="contact"> 
   <div class="inner-form" role="form" aria-labelledby="inscription"> 
     <fieldset> <!-- c'est tout ce qui entoure le formulaire-->
